# curiosity-text-to-sql-db-explorer

./: .gitignore  README.md  docker-compose.yml
executor/: README.md  pom.xml
executor/src/main/java/com/antigravity/executor/: ExecutorApplication.java
executor/src/main/java/com/antigravity/executor/controller/: MCPController.java
executor/src/main/java/com/antigravity/executor/service/: DatabaseInspector.java  SqlExecutorService.java
executor/src/main/java/com/curiosity/executor/: ExecutorApplication.java
executor/src/main/java/com/curiosity/executor/controller/: MCPController.java
executor/src/main/java/com/curiosity/executor/service/: DatabaseInspector.java  SqlExecutorService.java
executor/src/main/resources/: application.properties
explorer/: .env.example  README.md  pyproject.toml
explorer/src/: ingestion_pipeline.py  main.py  schema_explorer.py  server.py
orchestrator/: .env.example  README.md  pyproject.toml
orchestrator/src/: agent.py  main.py  state.py  tools_client.py
postgres_init/: init.sql
